new endpoint to get all result download urls in single call, cad-cloud-sdk docs, cad-cloud-sdk package initial setup
